--- a/index.html
+++ b/index.html
@@ -18,13 +18,20 @@
     <script>
         $.ajax({
             url: 'https://quran.kemenag.go.id/api/v1/surat/0/38',
-           type: "POST",
+            type: "POST",
+            cache: false,
+            dataType: "jsonp",
+            async: true,
             crossDomain: true,
-            data: JSON.stringify(somejson),
-            dataType: "json",
+            headers: {
+              "accept": "application/json",
+              "Access-Control-Allow-Origin":"*"
+            },
             success: (response) => {
                 console.log(response);
-            }
+            }.done((response)=>{
+                console.log(response);
+            })
         })
     </script>
 </body>
