--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
             },
             success: (response) => {
                 console.log(response);
-            }.done((response)=>{
+            }
+        }).done((response)=>{
                 console.log(response);
             })
-        })
     </script>
 </body>
 
